--- a/slides/css/theme/night.css
+++ b/slides/css/theme/night.css
@@ -1,8 +1,5 @@
-/*
 @import url(https://fonts.googleapis.com/css?family=Montserrat:700);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic);
-*/
-@import url(http://mplus-fonts.sourceforge.jp/webfonts/mplus_webfonts.css);
 /**
  * Black theme for reveal.js.
  *
@@ -12,14 +9,11 @@
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #1F1F21;
-  background-color: #1F1F21; }
+  background: #111111;
+  background-color: #111111; }
 
 .reveal {
-  /*
-   * font-family: "Open Sans", sans-serif;
-   */
-  font-family: mplus-1m-regular;
+  font-family: "Open Sans", sans-serif;
   font-size: 30px;
   font-weight: normal;
   letter-spacing: -0.02em;
@@ -41,11 +35,8 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #eeeeee;
-  /*
-   * font-family: "Montserrat", Impact, sans-serif;
-   */
-  font-family: mplus-1m-regular;
-  line-height: 1.2em;
+  font-family: "Montserrat", Impact, sans-serif;
+  line-height: 0.9em;
   letter-spacing: -0.03em;
   text-transform: none;
   text-shadow: none; }
@@ -79,7 +70,6 @@ body {
  *********************************************/
 .reveal section img {
   margin: 15px 0px;
-/*
   background: rgba(255, 255, 255, 0.12);
   border: 4px solid #eeeeee;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
@@ -87,9 +77,7 @@ body {
   -moz-transition: all .2s linear;
   -ms-transition: all .2s linear;
   -o-transition: all .2s linear;
-  transition: all .2s linear;
-*/
-}
+  transition: all .2s linear; }
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
